--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,15 @@
-<div class="container">
+<div class="container" data-controller="search-movies">
   <div class="row">
     <div class="col">
       <h1 class="h2 my-3 d-flex justify-content-center">Movies to watch 🍿</h1>
 
       <div>
-        <%= form_with url: movies_path, method: :get, html: {class: "mb-4"} do |f| %>
+        <%= form_with url: movies_path, method: :get, html: {data:{ search_movies_target: "form" }, class: "mb-4"} do |f| %>
           <%= f.label :query, "Type a movie title" %>
           <%= f.text_field :query,
                            class: "form-control",
-                           value: params[:query]
+                           value: params[:query],
+                           data: { search_movies_target: "input", action: "keyup->search-movies#update"}
                            %>
         <% end %>
 
